fix(waybar)!: Opacity causing flickering with hyprland. BUG w/ hyprland

--- a/home/config/waybar/style.css
+++ b/home/config/waybar/style.css
@@ -26,7 +26,6 @@
   font-weight: 400;
   color: @base04;
   background: @base01;
-  opacity: 0.8;
 }
 
 #workspaces {
